--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Common
 spring.application.name=order-service
 server.port=8081
+# Use local Kafka by default
+spring.kafka.bootstrap-servers=localhost:9092
 
 # Kafka producer config for LOCAL only (plaintext)
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
